New example with agents: AgentCollatz.ajs

2010-02-15
... operators in Parser as in func(par1, pars...)

2010-02-20
Variable parameters fun(pars...)
Splat invocation: myfun(1,pars...,2);

2010-02-21
WebCrawler.ajs in AjSharp.Console
Test Retrive Enum value from Type
Fix GetIndexedValue to support default properties

2010-02-28
Adding Foo["AProperty"] access with tests
Adding Foo["AFunction"](par1, par2) with tests
ObjectArrayAccess.ajs test example

2010-03-07
[STAThread] Added to main in AjSharp.Console
WatiN Google example in AjSharp.Examples

2010-03-14
Updated Wat.ajs example

2010-05-15
Hosting initial work
IHost
Host with tests
ObjectProxy
HostEvaluationTests
RunServer
SerializationTests in AjLanguage, AjSharp
Serializable attribute in some Expressions, Commands

2010-05-16
Adding MarshalByRef object to DynamicClass, DynamicObject
AjSharp.RemotingHost using remoting to access remote host and machines
RunHost returns ObjectProxy for IObject in Evaluate method
Hosting.Remoting: RemotingHostServer, RemotingHostClient
Hosting.Wcf: WcfHostServer, WcfHostClient, IHostServer
AjSharp.Hosting.RemotingHostServer
Host, RemotingHostServer, RemotingHostClient at AjSharp.AjSharpMachine
at host expression, at host command: support in Parser
HostedCommand with test
HostedExpression with test
ClientObject
RemotingHost.ajs, WcfHost.ajs examples
Host, WcfHostServer at AjSharpMachine
AjSharp.RunHost using WcfHostServer WcfHostClient instead RunServer

2010-05-18
HostedInvocationExpression
Support of at <host> <callable> with <args> in Parser, with tests

2010-05-19
Support of at <host> <callable> with <args>; as command in Parser
IsLocal in IHost
Host.IsLocal is true, XxxHostClient.IsLocal is false
Separate dictionaries for local and remote hosts in Machine
IHost.RegisterHost, work in progress

2010-05-20
IHost.OnRegisterHost with tests
Machine.GetLocalHosts, Machine.GetRemoteHosts with tests
IHost.Address with tests
RegisterRemotingHost.ajs new example